fixed grain positioning on mobile

--- a/style.css
+++ b/style.css
@@ -79,6 +79,11 @@ p {
         padding: 80px 16px 16px 16px;
     }
 
+    .grainContainer {
+
+        padding: 80px 16px 16px 16px;
+    }
+
     .projectName {
         left: 16px;
     }
